--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -1,14 +1,14 @@
-<header>  
-    <nav class="navbar" role="navigation">  
-        <div class="navbar__left">  
-            <a href="/"><strong>Ulynks</strong></a>  
-        </div>  
-        <div class="navbar__right">  
-            <a href="/">Home</a>  
-            <a href="/aboutus">About us</a>  
-            <a href="/services">Services</a>  
-            <a href="/products">Products</a> 
-            <a href="/contactus">Contact us</a>  
-        </div>  
-    </nav>  
-</header>  
+<header>
+    <nav class="navbar" role="navigation">
+        <div class="navbar__left">
+            <a href="/"><strong>Ulynks</strong></a>
+        </div>
+        <div class="navbar__right">
+            <a href="/">Home</a>
+            <a href="/about-us">About us</a>
+            <a href="/services">Services</a>
+            <a href="/products">Products</a>
+            <a href="/contact-us">Contact us</a>
+        </div>
+    </nav>
+</header>
