--- a/themes/ulynks/assets/css/app.css
+++ b/themes/ulynks/assets/css/app.css
@@ -71,9 +71,11 @@ img {
 .btn:hover {
   background-color: #DDCBA4;
 }
+
 .content-container {
   display: flex;
-  max-width: 2000px; /* Adjust the max-width as needed */
+  max-width: 2000px;
+  /* Adjust the max-width as needed */
   margin: 20px auto;
 }
 
@@ -83,3 +85,27 @@ img {
   color: #fff;
 }
 
+/* 
+body {
+  color: #222;
+  font-family: sans-serif;
+  line-height: 1.5;
+  margin: 1rem;
+  max-width: 768px;
+} 
+
+header {
+  border-bottom: 1px solid #222;
+  margin-bottom: 1rem;
+}
+
+footer {
+  border-top: 1px solid #222;
+  margin-top: 1rem;
+}
+
+a {
+  color: #00e;
+  text-decoration: none;
+} 
+*/
