--- a/themes/ulynks/assets/scss/app.scss
+++ b/themes/ulynks/assets/scss/app.scss
@@ -1,96 +1,13 @@
-@import "@primer/css/index.scss";
+// Primer CSS Typography variables
+// see: <https://github.com/pages-themes/primer/blob/master/_sass/primer-support/lib/variables/typography.scss>
+
+// Heading sizes - desktop
+// $h1-size: 32px !default;
+$h1-size: 64px !default;
+
+// Font stacks
+// $body-font: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+$body-font: "Poppins", sans-serif !default;
 
-body {
-    background: linear-gradient(119deg, #FBE6D8 -25.61%, #E07E3C 79.47%);
-    // color: white;
-    // color: #333;
-    font-size: 125%;
-    line-height: 1.5;
-    // margin: 1rem;
-    // margin: 0 auto;
-    font-family: "Poppins", 'sans-serif';
-    // max-width: 768px;
-}
-
-// .content {
-//     margin-bottom: 2rem;
-// }
-
-// .navbar {
-//     background: rgba(192, 192, 192, 0);
-//     color: #ffff;
-//     display: flex;
-//     align-items: center;
-//     justify-content: space-between;
-//     height: 25px;
-//     padding: 10px;
-// }
-
-// .navbar__right {
-//     display: flex;
-// }
-
-body,
-a {
-    color: #ffff;
-}
-
-a {
-    text-decoration: none !important;
-}
-
-// .navbar__right a {
-//     text-decoration: none;
-//     font-size: 14px;
-//     margin-right: 40px;
-//     color: #ffff;
-//     transition: all 100ms;
-// }
-
-// .navbar__right a:hover {
-//     text-decoration: underline;
-//     font-weight: bold;
-//     color: #ffff;
-// }
-
-// main {
-//     margin: 0 200px;
-// }
-
-// .image {
-//     flex: 1;
-//     text-align: center;
-// }
-
-// img {
-//     max-width: 100%;
-//     height: auto;
-// }
-
-// .btn {
-//     display: inline-block;
-//     padding: 10px 20px;
-//     border-radius: 40px;
-//     background: #7A6040;
-//     color: #fff;
-//     text-decoration: none;
-//     transition: background-color 0.3s;
-// }
-
-// .btn:hover {
-//     background-color: #DDCBA4;
-// }
-
-// .content-container {
-//     display: flex;
-//     max-width: 2000px;
-//     /* Adjust the max-width as needed */
-//     margin: 20px auto;
-// }
-
-// .text {
-//     flex: 1;
-//     padding: 60px;
-//     color: #fff;
-// }
+@import "@primer/css/index.scss";
