--- a/themes/ulynks/layouts/index.html
+++ b/themes/ulynks/layouts/index.html
@@ -9,15 +9,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
   -->
 </head>
-<div class="container-lg mx-auto py-6 p-responsive">
-  <div class="container clearfix">
-    <div class="col-6 float-left">
-      {{ .Content }}
-      <a href="/contact-us" class="btn">Contact Us</a>
-    </div>
-    <div class="col-1 float-left">
-      <img src="/img/image.svg" alt="Image">
-    </div>
-  </div>
+<div class="py-12">
+  {{ .Content }}
 </div>
 {{ end }}
