--- a/themes/ulynks/layouts/_default/baseof.html
+++ b/themes/ulynks/layouts/_default/baseof.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="{{ .Site.LanguageCode }}" data-color-mode="dark">
+<html lang="{{ .Site.LanguageCode }}" data-color-mode="dark" data-dark-theme="dark_dimmed">
     {{- partial "head.html" . -}}
 
     <body>
-        {{- partial "header.html" . -}}
-        <main>
-            {{- block "main" . }}{{- end }}
-        </main>
-        {{- partial "footer.html" . -}}
+        <div style="max-width: 1200px" class="mx-auto py-1 px-2">
+            {{- partial "header.html" . -}}
+            <main>
+                {{- block "main" . }}{{- end }}
+            </main>
+            {{- partial "footer.html" . -}}
+        </div>
     </body>
 
 </html>
