--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -1,7 +1,5 @@
-<div class="container-lg mx-auto text-white py-6 p-responsive">
-
+<footer class="py-3" style="position: fixed; bottom: 0;">
     <p>{{ .Site.Title }} Copyright {{ now.Year }}. All rights reserved.</p>
-
-</div>
+</footer>
 
 <script src="/assets/bundle.js"></script>
