--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -1,10 +1,13 @@
-<header class="container-lg mx-auto p-responsive d-flex flex-items-center flex-wrap flex-md-nowrap pt-3 pb-6">
-    <div>
-        <a class="text-white mr-3" href="/"><strong>{{ .Site.Title }}</strong></a>
-        <a class="text-white mr-3" href="/">Home</a>
-        <a class="text-white mr-3" href="/about-us">About us</a>
-        <a class="text-white mr-3" href="/services">Services</a>
-        <a class="text-white mr-3" href="/products">Products</a>
-        <a class="text-white mr-3" href="/contact-us">Contact us</a>
+<!-- Start Navbar -->
+<nav class="UnderlineNav" aria-label="Nav bar">
+    <div class="UnderlineNav-body">
+        <img class="avatar" height="40" alt="{{ .Site.Title }}" src="/img/logo.png" width="40">
+        <a class="UnderlineNav-item app-link" href="#home" aria-current="page">Home</a>
+        <a class="UnderlineNav-item app-link" href="#about">About</a>
+        <a class="UnderlineNav-item app-link" href="#services">Services</a>
     </div>
-</header>
+    <div class="UnderlineNav-actions">
+        <a href="mailto:{{ .Site.Params.contact.email }}" class="btn btn-sm">Reach Us</a>
+    </div>
+</nav>
+<!-- End Navbar -->
