themes/ulynks/assets/scss/app.scss

--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -7,7 +7,8 @@
         <a class="UnderlineNav-item app-link" href="#services">Services</a>
     </div>
     <div class="UnderlineNav-actions">
-        <a href="mailto:{{ .Site.Params.contact.email }}" class="btn btn-sm">Reach Us</a>
+        <a href="mailto:{{ .Site.Title }}%20%3c{{ .Site.Params.contact.email }}%3e?subject=Sent%20From%20uLynks'%20Website"
+            class="btn btn-sm">Reach Us</a>
     </div>
 </nav>
 <!-- End Navbar -->
