--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -5,9 +5,10 @@
         <a class="UnderlineNav-item app-link" href="#home" aria-current="page">Home</a>
         <a class="UnderlineNav-item app-link" href="#about">About</a>
         <a class="UnderlineNav-item app-link" href="#services">Services</a>
+        <a class="UnderlineNav-item app-link" href="#products">Products</a>
     </div>
     <div class="UnderlineNav-actions">
-        <a href="mailto:{{ .Site.Title }}%20%3c{{ .Site.Params.contact.email }}%3e?subject=Sent%20From%20uLynks'%20Website"
+        <a href="mailto:{{ .Site.Title }}%20%3c{{ .Site.Params.contact.email }}%3e?subject=Sent%20From%20{{ .Site.Title }}'%20Website"
             class="btn btn-sm">Reach Us</a>
     </div>
 </nav>
