--- a/themes/ulynks/layouts/_default/baseof.html
+++ b/themes/ulynks/layouts/_default/baseof.html
@@ -7,6 +7,7 @@
             {{- partial "header.html" . -}}
             {{- block "main" . }}{{- end }}
             {{- partial "footer.html" . -}}
+            {{- partial "script.html" . -}}
         </div>
     </body>
 
