themes/ulynks/assets/scss/app.scss

--- a/themes/ulynks/assets/scss/app.scss
+++ b/themes/ulynks/assets/scss/app.scss
@@ -11,3 +11,10 @@ $h1-size: 64px !default;
 $body-font: "Poppins", sans-serif !default;
 
 @import "@primer/css/index.scss";
+
+// Custom
+
+.Footer {
+  position: fixed;
+  bottom: 0;
+}
