--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="py-3" style="position: fixed; bottom: 0;">
+<footer class="Footer py-3">
     <p>{{ .Site.Title }} Copyright {{ now.Year }}. All rights reserved.</p>
 </footer>
 
