#6 cdn.jsdelivr.net/npm/jquery@3

--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -17,7 +17,8 @@
   <meta property="twitter:title" content="{{ $title }}">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="canonical" href="{{ .Site.BaseURL }}">
-  <link rel="dns-prefetch" href=" https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+  <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="stylesheet" type="text/css" href="/assets/main.css">
 </head>
