--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -6,7 +6,9 @@
   {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
   <title>{{ $title }}</title>
   <meta name="author" content="{{ $title }}">
-  <meta name="description" content="{{ .Site.Params.subtitle }}">
+  <meta name="description"
+    content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ else }}{{ with .Site.Params.subtitle }}{{ . }}{{ end }}{{ end }}{{ end }}{{ end }}">
+  {{ hugo.Generator }}
   <meta name="twitter:card" content="summary">
   <meta property="og:description" content="{{ .Site.Params.subtitle }}">
   <meta property="og:locale" content="en_US">
