--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -13,10 +13,10 @@
   <meta property="og:site_name" content="{{ $title }}">
   <meta property="og:title" content="{{ $title }}">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="{{ .Site.BaseURL }}">
+  <meta property="og:url" content="{{ .Permalink }}">
   <meta property="twitter:title" content="{{ $title }}">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-  <link rel="canonical" href="{{ .Site.BaseURL }}">
+  <link rel="canonical" href="{{ .Permalink }}">
   <link rel="dns-prefetch" href="https://fonts.googleapis.com">
   <link rel="dns-prefetch" href="https://cdn.jsdelivr.net">
   <link rel="shortcut icon" href="/favicon.ico">
