--- a/themes/ulynks/layouts/_default/single.html
+++ b/themes/ulynks/layouts/_default/single.html
@@ -6,10 +6,9 @@
 
     {{ $dateMachine := .Date | time.Format "2024-02-20T00:00:45+01:00" }}
     {{ $dateHuman := .Date | time.Format ":date_long" }}
-    <time class="text-body-secondary" datetime="{{ $dateMachine }}">{{ $dateHuman }}</time>
+    <p class="text-body-secondary pb-3"><time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time></p>
 
-    <p class="lead">{{ .Content }}</p>
-
+    {{ .Content }}
 
     {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
   </div>
