--- a/themes/ulynks/layouts/_default/home.html
+++ b/themes/ulynks/layouts/_default/home.html
@@ -1,7 +1,13 @@
 {{ define "main" }}
-  {{ .Content }}
-  {{ range site.RegularPages }}
+<main>
+  <div class="container py-5">
+
+    {{ .Content }}
+    {{ range site.RegularPages }}
     <h2><a href="{{ .RelPermalink }}">{{ .LinkTitle }}</a></h2>
     {{ .Summary }}
-  {{ end }}
+    {{ end }}
+
+  </div>
+</main>
 {{ end }}
