--- a/themes/ulynks/layouts/_default/single.html
+++ b/themes/ulynks/layouts/_default/single.html
@@ -4,13 +4,14 @@
 
     <h1 class="display-1">{{ .Title }}</h1>
 
+    {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+
     {{ $dateMachine := .Date | time.Format "2024-02-20T00:00:45+01:00" }}
     {{ $dateHuman := .Date | time.Format ":date_long" }}
-    <p class="text-body-secondary pb-3"><time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time></p>
+    <p class="text-body-secondary py-3"><time datetime="{{ $dateMachine }}">{{ $dateHuman }}</time></p>
 
     {{ .Content }}
 
-    {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
   </div>
 </main>
 {{ end }}
