--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -4,7 +4,7 @@
     <nav class="navbar navbar-expand-lg py-0">
       <div class="container">
         <a class="navbar-brand py-0" href="/" title="Home">
-          <img src="/img/logo.png" alt="{{ .Site.Title }}" class="img-fluid" width="100"></a>
+          <img src="/img/orange-logo-and-name.png" alt="{{ .Site.Title }}" class="img-fluid" width="200"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
