--- a/themes/ulynks/layouts/index.html
+++ b/themes/ulynks/layouts/index.html
@@ -1,14 +1,100 @@
-{{ define "main" }}
+{{/* {{ define "main" }}
 <main>
   <div class="container py-5">
+    {{ .Content }}
+  </div>
+  </div>
+</main>
+{{ end }} */}}
+
+
+{{ define "main" }}
+<main>
+
+  <div class="container py-5">
+
     <div class="row align-items-center">
       <div class="col">
-        {{ .Content }}
-        <a class="btn btn-primary" href="/team" role="button">Get to know us</a>
+        <h1 class="fw-bold mb-5">Our purpose</h1>
+        <p>Some text explaining why we do what we do, what makes us different and unique, why should people ask for our
+          services and contact us</p>
+        <a class="btn btn-primary mt-2" href="/team" role="button">Get to know us</a>
       </div>
       <div class="col">
-        <img src="/img/home.png" alt="uLynks" class="img-fluid" width="800">
+        <img src="img/home.png" alt="uLynks" class="img-fluid" width="800">
       </div>
+    </div>
+
+    <div class="mt-5 mb-5">
+      <h1 class="fw-bold mt-4 mb-5">How we can help you</h1>
+      <div class="row">
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body text-center">
+              <i class="bi bi-bar-chart"></i>
+              <h5 class="card-title fw-bold">Data Analysis</h5>
+              <p class="card-text">We offer data analysis consulting services to research support teams</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body text-center">
+              <i class="bi bi-laptop"></i>
+              <h5 class="card-title fw-bold">Web Apps</h5>
+              <p class="card-text">We develop web applications for research support and knowledge sharing</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body text-center">
+              <i class="bi bi-signpost-split"></i>
+              <h5 class="card-title fw-bold">AI</h5>
+              <p class="card-text">We keep up with the latest advancements of AI and can help you take the most out of
+                it
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body text-center">
+              <i class="bi bi-mortarboard-fill"></i>
+              <h5 class="card-title fw-bold">Training</h5>
+              <p class="card-text">We offer training to related to AI and data analysis to non tech professionals</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a class="btn btn-primary mt-5" href="/expertise" role="button">See all expertise</a>
+    </div>
+
+    <div class="mt-5 mb-5">
+      <h1 class="fw-bold">Brands that trust us</h1>
+      <div class="row mb-5 p-5">
+        <div class="col-md-4">
+          <img src="img/white-sdu.png" alt="SDU" class="img-fluid" width=100>
+        </div>
+        <div class="col-md-4">
+          <img src="img/white-aa.png" alt="Aalborg" class="img-fluid" width=100>
+        </div>
+        <div class="col-md-4">
+          <img src="img/white-banos.png" alt="Blue Mission BANOS" class="img-fluid" width=100>
+        </div>
+      </div>
+      <div class="row  mb-5 p-5">
+        <div class="col-md-4">
+          <img src="img/white-prep4blue.png" alt="PREP4BLUE" class="img-fluid" width=200>
+        </div>
+        <div class="col-md-4">
+          <img src="img/white-bmaa.png" alt="Blue Mission AA" class="img-fluid" width=200>
+        </div>
+        <div class="col-md-4">
+          <img src="img/white-yerun.png" alt="YERUN" class="img-fluid" width=200>
+        </div>
+      </div>
+      <a class="btn btn-primary mt-5" href="/portfolio" role="button">See our portfolio</a>
     </div>
   </div>
 </main>
