card h-100 bug on Safari

--- a/layouts/events/list.html
+++ b/layouts/events/list.html
@@ -27,7 +27,7 @@
       <br>
 
       {{/* add the event image  */}}
-      <img src="{{ .Params.image_url }}">
+      <img src="{{ .Params.image }}">
 
       {{ end }}
     </div>
