--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -20,9 +20,9 @@
 
         {{/* card with image, title, description and buttons  */}}
         <div class="col">
-          <div class="card h-100">
+          <div class="card">
             <div class="card-header text-center p-0">
-              <img class="card-img-top rounded h-100 w-auto" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
+              <img class="card-img-top rounded" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
             </div>
             <div class="card-body overflow-y-scroll">
               <h2 class="card-title">{{ .LinkTitle }}</h2>
