--- a/layouts/portfolio/list.html
+++ b/layouts/portfolio/list.html
@@ -20,8 +20,8 @@
             <p class="card-text">{{ .Summary | safeHTML | truncate 100 }}</p>
           </div>
           <div class="card-footer bg-transparent border-dark py-3">
-            <a class="btn btn-primary" href="{{ .RelPermalink }}" role="button">Read more</a>
-            <a class="btn btn-primary ms-2" href="{{ .Params.link }}" target="_blank" role="button"><i
+            <a class="btn btn-primary me-2" href="{{ .RelPermalink }}" role="button">Read more</a>
+            <a class="btn btn-primary me-2" href="{{ .Params.link }}" rel="noopener noreferrer" role="button"><i
                 class="bi bi-box-arrow-up-right"></i></a>
           </div>
         </div>
