--- a/layouts/expertise/list.html
+++ b/layouts/expertise/list.html
@@ -2,7 +2,7 @@
 <main>
   <div class="container py-5">
 
-    <h1 class="display-1 mb-5">Discover our Expertises</h1>
+    <h1 class="display-1 pb-4">{{ .Title }}</h1>
 
 
     <div class="row">
