<div class="card h-100">

--- a/layouts/team/list.html
+++ b/layouts/team/list.html
@@ -19,7 +19,7 @@
 
       {{/* card with image, title, description and buttons  */}}
       <div class="col">
-        <div class="card">
+        <div class="card h-100">
           <div class="card-header text-center p-0">
             <img class="card-img-top rounded" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
           </div>
