--- a/layouts/team/_list.html
+++ b/layouts/team/_list.html
@@ -1,10 +1,12 @@
+{{/* deprecated if eq ( mod $i 5 ) 0 is worth documenting ;-) @JV-conseil, 20240313 */}}
+
 {{ define "main" }}
 <main>
   <div class="container py-5">
 
     <h1 class="display-1">{{ .Title }}</h1>
 
-    <div class="row row-cols-4">
+    <div class="row py-4">
 
       {{/* reverse so that the most recent event appears first  */}}
 
@@ -12,8 +14,13 @@
       {{ range $i, $page := .Pages.Reverse }}
       {{ $i = add $i 1 }}
 
+      {{ if eq ( mod $i 5 ) 0 }}
+    </div>
+    <div class="row py-4">
+      {{ end }}
+
       {{/* card with image, title, description and buttons  */}}
-      <div class="col py-3">
+      <div class="col">
         <div class="card h-100">
           <div class="card-header text-center p-0">
             <img class="card-img-top rounded" src="{{ .Params.image }}" alt="{{ .LinkTitle }}">
