--- a/themes/ulynks/layouts/partials/head.html
+++ b/themes/ulynks/layouts/partials/head.html
@@ -2,16 +2,15 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  {{ $title := print .Site.Title " | " .Title }}
+  {{ $title := print .Title " | " .Site.Title }}
   {{ if .IsHome }}{{ $title = .Site.Title }}{{ end }}
   <title>{{ $title }}</title>
   <meta name="author" content="{{ $title }}">
-  <meta name="description"
-    content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ else }}{{ with .Site.Params.subtitle }}{{ . }}{{ end }}{{ end }}{{ end }}{{ end }}">
+  {{ $description := or .Description .Summary .Site.Params.description .Site.Params.subtitle }}
+  <meta name="description" content="{{ $description }}">
   {{ hugo.Generator }}
   <meta name="twitter:card" content="summary">
-  <meta property="og:description"
-    content="{{ with .Description }}{{ . }}{{ else }}{{if .IsPage}}{{ .Summary }}{{ else }}{{ with .Site.Params.description }}{{ . }}{{ else }}{{ with .Site.Params.subtitle }}{{ . }}{{ end }}{{ end }}{{ end }}{{ end }}">
+  <meta property="og:description" content="{{ $description }}">
   <meta property="og:locale" content="en_US">
   <meta property="og:site_name" content="{{ $title }}">
   <meta property="og:title" content="{{ $title }}">
