--- a/themes/ulynks/layouts/partials/header.html
+++ b/themes/ulynks/layouts/partials/header.html
@@ -6,7 +6,8 @@
       <div class="container">
 
         <a class="navbar-brand py-0" href="/" title="Home">
-          <img src="/img/orange-logo-and-name.png" alt="{{ .Site.Title }}" class="img-fluid" width="200"></a>
+          <img src="/img/orange-logo-and-name.png" alt="{{ .Site.Title }}" class="img-fluid" width="200">
+        </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
