--- a/themes/ulynks/layouts/partials/footer.html
+++ b/themes/ulynks/layouts/partials/footer.html
@@ -35,7 +35,7 @@
         </div>
 
         <div class="col text-end">
-          {{/* <img src="/img/logo-footer.png" alt="uLynks" class="img-fluid" width="200"> */}}
+          {{/* <img src="/img/logo/ulynks-logo-color-no-text.png" alt="uLynks" class="img-fluid" width="200"> */}}
           <img src="/img/logo/ulynks-logo-color.svg" alt="uLynks" height="150">
         </div>
       </div>
